--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Polo Ornelas
 description: 
 google_analytics: UA-144302-7
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
 
 gems:
