--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Polo Ornelas
-description: 
+description: Profile: Marco Polo Ornelas Alfaro
 google_analytics: UA-144302-7
 show_downloads: false
 theme: jekyll-theme-minimal
